Fixed cart buttons clipping on mobile

--- a/styling/layout.css
+++ b/styling/layout.css
@@ -219,6 +219,11 @@ nav div {
         justify-content: space-between;
         height: 100px;
     }
+
+    #cartPrice > button {
+        margin-top: 20px;
+        margin-bottom: 50px;
+    }
 }
 
 
